Creation des tests d'integrations